--- a/projekt-lightbox-jquery-plugin/lightbox.css
+++ b/projekt-lightbox-jquery-plugin/lightbox.css
@@ -1,16 +1,5 @@
-.gallery-item img{
-    width: 150px;
-    height: auto;
-    float: left;
-    display: block;
-    text-decoration: none;
-    padding: 3px;
-    border: 1px solid rgb(200, 200, 200);
-    margin: 5px;
-}
 
-
-#overlay{
+#lightbox__overlay{
     position: absolute;
     top: 0px;
     left: 0px;
@@ -19,7 +8,7 @@
     background-color: black;
     opacity: 0.75;
 }
-#overlay-container{
+#lightbox__overlay-container{
     position: absolute;
     top: 0px;
     left: 0px;
@@ -27,7 +16,7 @@
     bottom: 0px;
 
 }
-#overlay-image{
+#lightbox__overlay-image{
     max-width: 80%;
     max-height: 80%;
     margin-top: 10%;
