--- a/nodeprojekt/public/css/app.css
+++ b/nodeprojekt/public/css/app.css
@@ -1,3 +1,20 @@
-body{
-    background-color: rgb(100,100,100);
+body {
+    background-color: rgb(100, 100, 100);
+    font-family: "Helvetica", "Helvtica Neue", "Arial";
+}
+
+.entry {
+    background-color: white;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.entry h3 {
+    margin-top: 0px;
+}
+
+.new-entry {
+    background-color: white;
+    border: 1px solid black;
+    padding: 5px;
 }
