--- a/Spiel 2/style.css
+++ b/Spiel 2/style.css
@@ -7,34 +7,39 @@
     width: 500px;
     height: 200px;
     border: 1px solid black;
+    margin: 50px;
+    posit;
 }
 
 #character {
-    width: 20px;
-    height: 50px;
-    background-color: red;
+    width: 50px;
+    height: 80px;
+    
+    background-image: url('dino.png');
+    background-repeat: no-repeat;
     position: relative;
-    top: 150px;
+    top: 120px;
 }
 .animate{
     animation: jump 500ms ;
 }
 
 @keyframes jump{
-    0% {top: 150px;}
-    30%{top: 100px;}
-    70%{top: 100px;}
-    100%{top: 150px;}
+    0% {top: 120px;}
+    30%{top: 80px;}
+    70%{top: 80px;}
+    100%{top: 120px;}
 }
 
 #block {
-    width: 20px;
-    height: 20px;
-    background-color: blue;
+    width: 50px;
+    height: 50px;
     position: relative;
-    top: 130px;
+    top: 70px;
     left: 480px;
     animation: block 1s infinite linear;
+    background-image: url('kaktus.png');
+    background-repeat: no-repeat;
 }
 
 @keyframes block{
