--- a/Spiel Fall_Game/style.css
+++ b/Spiel Fall_Game/style.css
@@ -8,6 +8,33 @@
     height: 500px;
     border: 1px solid black;
     margin: auto;
+}
 
-    
+#character{
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    border-radius: 50%;
+    position: relative;
+    top: 440px;
+    left: 190px;
+    z-index: 10000;
+}
+
+.block{
+    width: 400px;
+    height: 20px;
+    background-color: black;
+    position: relative;
+    top:100px;
+    margin-top: -20px;
+}
+
+.hole{
+    width: 40px;
+    height: 20px;
+    background-color: white;
+    position: relative;
+    top: 100px;
+    margin-top: -20px;
 }
