--- a/todolist/style.css
+++ b/todolist/style.css
@@ -1,4 +1,18 @@
-/* Standart */
+/*CSS variables*/
+
+:root {
+    --maincolor: #276678;
+    --maincolor-light: #1687a7;
+
+    --secondcolor: #d3e0ea;
+    --secondcolor-light: #f6f5f5;
+
+    --color-white: white;
+    --color-black: black;
+  }
+
+
+/* Default Values */
 *,
 *::before,
 *::after{
@@ -15,7 +29,7 @@ html{
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: var(--black);
     font-weight: 300;
     line-height: 1.6;
     
@@ -25,38 +39,49 @@ body{
 
 .container {
     display: grid;
-    grid-template-rows: 10vw 40vw 10vw;
+    grid-template-rows: 5vw 40vw 5vw;
     grid-template-columns: 10vw max-content 10vw;
 }
 
 .App{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    border: black 1px solid;
+    border: var(--black) 1px solid;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
     padding: 1rem;
+    background-color: var(--maincolor);
 }
 
 .App h1{
     text-transform: uppercase;
     font-weight: 600;
     text-align: center;
+    color: var(--secondcolor-light);
 }
 
 #inputField {
-    border: 1px solid black;
+    border: 1px solid var(--black);
     outline: none;
     font-size: 2.5rem;
     height: 4rem;
     vertical-align: middle;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
+    background-color: var(--secondcolor-light);
+    color: var(--maincolor-light);
 }
 
 #addButton{
-    border: 1px solid black;
+    border: 1px solid var(--black);
     font-size: 3rem;
     height: 4rem;
     vertical-align: middle;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
-    background-color: white;
+    background-color: var(--secondcolor-light);
+    color: var(--secondcolor);
+}
+
+.paragraph{
+    cursor: pointer;
+    font-size: 20px;
+    color: var(--secondcolor-light);
 }
