--- a/expanse/style.css
+++ b/expanse/style.css
@@ -42,18 +42,20 @@ body{
 
 .container {
     display: grid;
-    grid-template-rows: 5vh 40vh 5vh;
-    grid-template-columns: 10vw max-content 10vw;
+    grid-template-columns: 1fr;
+    grid-row-gap: 2rem;
+    grid-column-gap: 2rem;
     padding: 2rem;
 }
 
 .App{
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     border: var(--black) 1px solid;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
     padding: 1rem;
     background-color: var(--maincolor);
+    
 }
 
 .App h1{
@@ -66,8 +68,7 @@ body{
 .input__form {
     padding-top: 2rem;
     display: grid;
-    grid-template-rows: min-content min-content min-content min-content;
-    grid-template-columns: min-content min-content min-content;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
     
@@ -91,37 +92,37 @@ body{
 }
 
 #inputLabel--Name {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 1 / 2;
 }
 
 #inputField--Name {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
 }
 
 #inputLabel--Date {
-    grid-column: 3 / 5;
+    grid-column: 2 / 4;
     grid-row: 1 / 2;
 }
 
 #inputField--Date {
-    grid-column: 3 / 5;
+    grid-column: 2 / 4;
     grid-row: 2 / 3;
 }
 
 #inputLabel--Amount {
-    grid-column: 1 / 5;
+    grid-column: 1 / 4;
     grid-row: 3 / 4;
 }
 
 #inputField--Amount {
-    grid-column: 1 / 5;
+    grid-column: 1 / 4;
     grid-row: 4 / 5;
 }
 
 #addButton{
-    grid-column: 1 / 5;
+    grid-column: 1 / 4;
     grid-row: 5 / 6;
     border: 1px solid var(--black);
     font-size: 3rem;
@@ -134,11 +135,31 @@ body{
 
 #addButton:hover{
     background-color: var(--secondcolor);
-    color: var(--secondcolor-light);
+    color: var(--color-grey);
+    
 }
 
-.paragraph{
+#container--list{
+    display: none;
+}
+
+.expanse{
+    border: var(--black) 1px solid;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
+    padding: 1rem;
+    background-color: var(--secondcolor);
+    width: 100%;
+    
+}
+.expanse tr{
+    color: var(--color-grey-light);
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+
+.tdElement{
     cursor: pointer;
     font-size: 20px;
-    color: var(--secondcolor-light);
+    color: var(--secondcolor);
+    background-color: var(--color-grey-light);
 }
