--- a/noteTraker/style.css
+++ b/noteTraker/style.css
@@ -40,7 +40,7 @@ body{
 
 /* Start Styling */
 
-.container {
+.container--App {
     display: flex;
     padding: 2rem;
     align-items: center;
@@ -109,20 +109,13 @@ body{
     color: var(--color-grey);
 }
 
-.paragraph{
-    cursor: pointer;
-    font-size: 20px;
-    height: 20rem;
-    overflow: hidden;
-    color: var(--color-grey-light);
-}
-
 .container--Notes {
     background-color: var(--color-white);
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-row-gap: 2rem;
     grid-column-gap: 2rem;
+    padding: 2rem;
 }
 
 .notesList{
@@ -132,6 +125,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 40rem;
     
 }
 
@@ -142,3 +136,30 @@ body{
     color: var(--color-black);
     margin: auto;
 }
+
+.overlay{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: black;
+    opacity: 0.75;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.overlayParagraph {
+    color: var(--color-white);
+    font-size: 1.5rem;
+    padding: 2rem;
+}
+
+.paragraph{
+    font-size: 20px;
+    height: 20rem;
+    overflow: hidden;
+    color: var(--color-grey-light);
+}
+
