--- a/changeColor/style.css
+++ b/changeColor/style.css
@@ -62,6 +62,7 @@ body{
 
 h1 {
     text-align: center;
+    margin: 1rem;
 }
 
 .btn {
@@ -73,4 +74,23 @@ h1 {
     height: 5vw;
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.5);
 
+}
+
+.previous{
+    background-color: #f8e978;
+    color: black;
+    border: solid 1px #F7DF1E;
+    border-radius: 0;
+    font-family: "Lato", sans-serif;;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    transition: all .2s;
+    margin: 1rem;
+}
+
+.previous:hover {
+    background-color: #ffe100;
 }
