--- a/clickCounter/style.css
+++ b/clickCounter/style.css
@@ -14,13 +14,23 @@ html{
 }
 
 body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--black);
+    font-weight: 300;
+    line-height: 1.6;
+    
+}
+
+.contianer{
     display: flex;
+    padding: 2rem;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 
-.container{
+.counter__container{
     background-color: #F9F7F7;
     color: #3F72AF;
     width: 20rem;
@@ -39,3 +49,21 @@ body{
     font-size: 2rem;
 }
 
+.previous{
+    background-color: #f8e978;
+    color: black;
+    border: solid 1px #F7DF1E;
+    border-radius: 0;
+    font-family: "Lato", sans-serif;;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    transition: all .2s;
+    margin: 1rem;
+}
+
+.previous:hover {
+    background-color: #ffe100;
+}
