--- a/HexColorsGradient/style.css
+++ b/HexColorsGradient/style.css
@@ -11,10 +11,15 @@
 
 html{
     box-sizing: border-box;
+    
+    
+}
+
+.container{
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    flex-direction: column;
 }
 
 .App{
@@ -23,7 +28,7 @@ html{
     align-items: center;
     flex-direction: column;
     text-align: center;
-    height: 100vh;
+    height: 80vh;
     width: 100vw;
 }
 
@@ -33,7 +38,7 @@ html{
     align-items: center;
     text-align: center;
     flex-direction: column;
-    height: 50vh;
+    height: 40vh;
     width: 100%;
 }
 
@@ -43,10 +48,29 @@ html{
     align-items: center;
     text-align: center;
     flex-direction: column;
-    height: 50vh;
+    height: 40vh;
     width: 100%;
 }
 
 h1, h2 {
     text-transform: uppercase;
+}
+
+.previous{
+    background-color: #f8e978;
+    color: black;
+    border: solid 1px #F7DF1E;
+    border-radius: 0;
+    font-family: "Lato", sans-serif;;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    transition: all .2s;
+    margin: 1rem;
+}
+
+.previous:hover {
+    background-color: #ffe100;
 }
