--- a/overview/css/style.comp.css
+++ b/overview/css/style.comp.css
@@ -168,6 +168,12 @@ h1, h2, h3, h4, h5 {
 .heading--section {
   grid-column: 1 / -1; }
 
+.portfolio--title {
+  grid-column: 1 / -1;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 600; }
+
 .mb-sm {
   margin-bottom: 2rem; }
 
