--- a/game1/style.css
+++ b/game1/style.css
@@ -13,25 +13,45 @@ html{
     box-sizing: border-box;
 }
 
-body{
+.container{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-.container{
+.App{
     padding: 1rem;
     background-color: #219F94;
     color: #F2F5C8;
+    display: flex;
+    flex-direction: column;
 }
 
 #game{
     background-color: #C1DEAE;
     border: 1px solid rgb(100,100,100);
-    width: 200px;
+    width: 100%;
     height: 400px;
     position: relative;
+    overflow: hidden;
+}
+
+#fallingBox{
+    background-color: "#E8E8A6";
+    border: 2px solid white;
+
+}
+
+.gameBtn{
+    color: black;
+    background-color: lightblue;
+    width: 10rem;
+    height: 5rem;
+    font-size: 1.4rem;
+}
+.gameBtn:hover{
+    background-color: white;
 }
 
 .previous{
