--- a/dogGame/style.css
+++ b/dogGame/style.css
@@ -33,14 +33,14 @@ body{
     border: 1px solid;
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 500px;
     height: 300px;
     justify-content: space-between;
 }
 
-.gamefield{
+#gamefield{
     position: relative;
-    width: 600px;
+    width: 500px;
     height: 200px;
 }
 
@@ -50,17 +50,54 @@ body{
     bottom: 0;
 }
 
-#dog{
+#Dog{
     position: absolute;
-    left: 500px;
+    left: 400px;
     bottom: 0;
+   width: 40px;
+   height: 40px;
 }
 
 #ball{
     position: absolute;
-    left: 10px;
     bottom: 5px;
-    z-index: -1;
+    z-index: 1;
+    left: 0px;
+    background-image: url('Ball.jpg');
+    background-repeat: no-repeat;
+    animation: 2s linear;
+
+    
+}
+
+@keyframes a1 {
+    0%   {left: 0px; bottom: 0px;}
+    50%  {left: 50px; bottom: 10px;}
+    100% {left: 100px; bottom: 0px;}
+}
+
+@keyframes a2 {
+    0%   {left: 0px; bottom: 5px;}
+    50%  {left: 100px; bottom: 20px;}
+    100% {left: 200px; bottom: 0px;}
+}
+
+@keyframes a3 {
+    0%   {left: 0px; bottom: 5px;}
+    50%  {left: 200px; bottom: 20px;}
+    100% {left: 300px; bottom: 0px;}
+}
+
+@keyframes a4 {
+    0%   {left: 0px; bottom: 5px;}
+    50%  {left: 100px; bottom: 35px;}
+    100% {left: 400px; bottom: 0px;}
+}
+
+@keyframes a5 {
+    0%   {left: 0px; bottom: 5px;}
+    50%  {left: 300px; bottom: 50px;}
+    100% {left: 500px; bottom: 0px;}
 }
 
 #life{
